--- a/services/login.html
+++ b/services/login.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local storage Auth</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   
     <div class="container">
-        <h3 style="color:white">Login</h3>
+        <h3 style="color:white">Register</h3>
         <img src="" alt="avatar">
         <form action="#">
-            <label for="username">Username</label><br>
-            <input type="text"name="username"id="username">
-            <label for="email">Email</label><br>
+            <label for="email">Email</label>
             <input type="email"name="email"id="email">
             <label for="password">Password</label>
             <input type="password"name="password"id="password">
             <button>SIGN UP</button>
-            <h3><a href="./services/login.html"><small>Have Account? Login</small></a></h3>
+            <h3><a href="../index.html"><small>Don't have Account? Create</small></a></h3>
         </form>
     </div>
     <script src="script.js"></script>
