--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   
     <div class="container">
-        <h3 style="color:white">Login</h3>
-        <img src="" alt="avatar">
+        <h3 style="color:white">REGISTER</h3>
+        <img src="./images/avatar.jpeg" alt="avatar">
         <form onsubmit="signup(event)" autocomplete="off">
             <label for="username">Username</label><br>
             <input type="text"name="username"id="username"placeholder="Username"required>
