--- a/services/login.html
+++ b/services/login.html
@@ -10,14 +10,14 @@
 <body>
   
     <div class="container">
-        <h3 style="color:white">Register</h3>
-        <img src="" alt="avatar">
+        <h3 style="color:white">LOGIN</h3>
+        <img src="../images/avatar.jpeg" alt="avatar">
         <form action="#">
             <label for="email">Email</label>
             <input type="email"name="email"id="email">
             <label for="password">Password</label>
             <input type="password"name="password"id="password">
-            <button>SIGN UP</button>
+            <button>LOGIN</button>
             <h3><a href="../index.html"><small>Don't have Account? Create</small></a></h3>
         </form>
     </div>
