--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="container">
         <h3 style="color:white">REGISTER</h3>
         <img src="./images/avatar.jpeg" alt="avatar">
-        <form onsubmit="signup(event)" autocomplete="off">
+        <form autocomplete="off">
             <label for="username">Username</label><br>
             <input type="text"name="username"id="username"placeholder="Username"required>
             <label for="email">Email</label><br>
             <input type="email"name="email"id="email"placeholder="Email"required
             <label for="password">Password</label>
             <input type="password"name="password"id="password"placeholder="*****"required>
-            <button>SIGN UP</button>
+            <button class="btn">SIGN UP</button>
             <h3><a href="./services/login.html"><small>Have Account? Login</small></a></h3>
         </form>
     </div>
