working on authenticating user

--- a/services/login.html
+++ b/services/login.html
@@ -14,13 +14,14 @@
         <img src="../images/avatar.jpeg" alt="avatar">
         <form action="#">
             <label for="email">Email</label>
-            <input type="email"name="email"id="email">
+            <input type="email"name="email"id="emaill">
             <label for="password">Password</label>
-            <input type="password"name="password"id="password">
-            <button>LOGIN</button>
+            <input type="password"name="password"id="passwordd">
+            <button id="btnn">LOGIN</button>
             <h3><a href="../index.html"><small>Don't have Account? Create</small></a></h3>
         </form>
+        <p style="color:red">input values does not match</p>
     </div>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
