working on authenticating user

--- a/services/login.html
+++ b/services/login.html
@@ -12,12 +12,12 @@
     <div class="container">
         <h3 style="color:white">LOGIN</h3>
         <img src="../images/avatar.jpeg" alt="avatar">
-        <form action="#">
+        <form>
             <label for="email">Email</label>
-            <input type="email"name="email"id="emaill">
+            <input type="email"name="email"id="emaill"required>
             <label for="password">Password</label>
-            <input type="password"name="password"id="passwordd">
-            <button id="btnn">LOGIN</button>
+            <input type="password"name="password"id="passwordd"required>
+            <button class="button">LOGIN</button>
             <h3><a href="../index.html"><small>Don't have Account? Create</small></a></h3>
         </form>
         <p style="color:red">input values does not match</p>
