created the javascript folder

--- a/services/login.html
+++ b/services/login.html
@@ -22,6 +22,6 @@
         </form>
         <p style="color:red">input values does not match</p>
     </div>
-    <script src="../script.js"></script>
+    <script src="../javascript/login.js"></script>
 </body>
 </html>
