--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <h3><a href="./services/login.html"><small>Have Account? Login</small></a></h3>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="../javascript/register.js"></script>
 </body>
 </html>
