implemented all the requirements for the projects

--- a/services/login.html
+++ b/services/login.html
@@ -20,7 +20,7 @@
             <button class="button">LOGIN</button>
             <h3><a href="../index.html"><small>Don't have Account? Create</small></a></h3>
         </form>
-        <p style="color:red">input values does not match</p>
+        <p  class="error"style="color:red"></p>
     </div>
     <script src="../javascript/login.js"></script>
 </body>
