--- a/pages/todo.html
+++ b/pages/todo.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <h2>Welocome Back</h2>
-    <div class="output">
-        <!--Displaying user data-->
+    <div class="container">
+    <h2>The to-do application</h2>
     </div>
 </body>
 </html>
